src/objects/SAP_Contact_Sold_To__c/SAP_Contact_Sold_To__c.object-meta.xml
<CustomObject>
    <label>Web Portal SAP Contact Sold To</label>
    <nameField>
        <label>SAP Contact Sold To Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Web Portal SAP Contact Sold To</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>