src/objects/SAP_Contact_Sold_To__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <lookupFilter>
        <active>false</active>
        <errorMessage>Contact Status should not be inactive</errorMessage>
        <filterItems>
            <field>Contact.Contact_Status__c</field>
            <operation>notEqual</operation>
            <value>Inactive</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Web Portal SAP Contact Sold To</relationshipLabel>
    <relationshipName>SAP_Contact_Sold_To</relationshipName>
    <type>Lookup</type>
</CustomField>