src/objects/SAP_Contact_Sold_To__c/fields/SAP_Account_Sold_To__c.field-meta.xml
<CustomField>
    <fullName>SAP_Account_Sold_To__c</fullName>
    <label>SAP Account Sold To</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>