src/objects/SAP_Contact_Sold_To__c/fields/SoldtoToolAccess__c.field-meta.xml
<CustomField>
    <fullName>SoldtoToolAccess__c</fullName>
    <label>SoldtoToolAccess</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OrdersReturns</fullName>
            </value>
            <value>
                <fullName>WarrantyClaims</fullName>
            </value>
            <value>
                <fullName>ContractsReporting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>